--- a/app/src/main/res/layout/result_view.xml
+++ b/app/src/main/res/layout/result_view.xml
@@ -10,8 +10,12 @@
     <TableLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/result_view_table"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:shrinkColumns="*"
+        android:stretchColumns="*"
+        android:width="100dp"
         />
 
     <Button
