--- a/app/src/main/res/layout/result_view.xml
+++ b/app/src/main/res/layout/result_view.xml
@@ -1,10 +1,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/result_view_relative_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_centerHorizontal="true"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:gravity="center"
     android:orientation="vertical"
+    android:layout_centerHorizontal="true"
     >
 
     <TableLayout
@@ -15,7 +16,6 @@
         android:layout_height="wrap_content"
         android:shrinkColumns="*"
         android:stretchColumns="*"
-        android:width="100dp"
         />
 
     <Button
